Live Posts ui updates

--- a/flaskhome/app/templates/base.html
+++ b/flaskhome/app/templates/base.html
@@ -64,7 +64,7 @@
 <h1>Stackurious</h1>
 
 {% block tagid %}{% endblock %}
-{% block tagop %}{% endblock %}
+{% block taglive %}{% endblock %}
 
       </div>
 
