--- a/flaskhome/app/templates/charttag.html
+++ b/flaskhome/app/templates/charttag.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %} <!--this means that you are extending the base tempate -->
 {% block tagid %} <!-- this is the name of the block below -->
-<table>
- <tr><td>
-  <table>
-   <tr><td>&nbsp;</td>
-   <td>
+
+<h2 id="js-toptags-alltime">Top Tags - All Time</h2>
+    <div id="barChartTag"></div>
+
+<h2 id="js-toptags-month">Top Tags - By Month</h2>
+<a href="#">Back to Top</a><br/>
     <select id="tagByMonth">
       <option value="2016_12" selected="true">2016 Dec</option>
       <option value="2016_11">2016 Nov</option>
@@ -19,17 +20,11 @@
       <option value="2016_2">2016 Feb</option>
       <option value="2016_1">2016 Jan</option>
     </select>
-   </td></tr>
-  <tr><td width="55%">
-    <div id="barChartTag" />
-  </td>
-  <td width="45%">
+    <br/><br/>
      <div id="tagChartByMonth"></div>
-  </td>
-  </tr><table>
- </td></tr>
 
- <tr><td width="100%">
+<h2 id="js-faq"> Frequently Asked Questions</h2>
+<a href="#">Back to Top</a><br/>
 <div class="panel panel-default" style="width:100%">
   <div class="panel-heading">
     <h3 class="panel-title">Frequently Asked Questions based on Selected Tag</h3>
@@ -65,28 +60,42 @@
 </div>
 
 
-</td></tr>
-
-</table>
-
-
     <script type="text/javascript">
-      var barTagsvg = dimple.newSvg("#barChartTag", 500, 500);
-
-      createTagChart(barTagsvg, dimple.plot.bar, "/api/tags?count=10", "tags", "Top 10 Tags By Popularity");
-
+      $(document).ready(function () {
+        var barTagsvg = dimple.newSvg("#barChartTag", 950, 500);
+        createTagChart(barTagsvg, dimple.plot.bar, "/api/tags?count=10", "tags", "Top 10 Tags By Popularity");
+      });
       function createTagChart(svg, seriestype, url, dataKey, title) {
         var myChart = new dimple.chart(svg, []);
         d3.json(url, function (error,data) {
           //myChart = new dimple.chart(svg, data[dataKey]);
           myChart.data = data[dataKey];
-          myChart.setBounds(60, 30, 455, 355);
+          myChart.setBounds(60, 30, 880, 355);
           var x = myChart.addCategoryAxis("x", "name");
           //x.addOrderRule("Date");
           x.title = "Tag"
+          x.fontSize = "14";
+          x.fontFamily = "courier new";
           var y = myChart.addMeasureAxis("y", "count");
-          y.title = "Counts"
-          var s = myChart.addSeries(null, seriestype);
+          y.title = "Counts";
+          y.fontSize = "13";
+          y.fontFamily = "courier new";
+          var s = myChart.addSeries("name", seriestype);
+
+          //http://dimplejs.org/advanced_examples_viewer.html?id=advanced_custom_styling
+          // Define a custom color palette.  These colours are based on the excellent
+          // set at http://flatuicolors.com/
+         myChart.defaultColors = [
+          new dimple.color("#3498db", "#2980b9", 1), // blue
+          new dimple.color("#e74c3c", "#c0392b", 1), // red
+          new dimple.color("#2ecc71", "#27ae60", 1), // green
+          new dimple.color("#9b59b6", "#8e44ad", 1), // purple
+          new dimple.color("#e67e22", "#d35400", 1), // orange
+          new dimple.color("#f1c40f", "#f39c12", 1), // yellow
+          new dimple.color("#1abc9c", "#16a085", 1), // turquoise
+          new dimple.color("#95a5a6", "#7f8c8d", 1)  // gray
+        ];
+
           myChart.draw();
           var c=myChart;
  svg.append("text")
@@ -105,7 +114,7 @@
 
 <script type="text/javascript">
    // setup Tag Chart By Month
-      var tagChartByMonth = dimple.newSvg("#tagChartByMonth", 500, 500);
+      var tagChartByMonth = dimple.newSvg("#tagChartByMonth", 950, 500);
       var dimpleChartByMonth = createTagChart(tagChartByMonth, dimple.plot.bar, "/api/tag/2016/12?count=10", "tags", "Top Tags For 2016 Dec");
    
     $(document).ready(function () {      
@@ -118,7 +127,7 @@
 
        $('#tagChartByMonth').empty();
       
-      var tagChartByMonth = dimple.newSvg("#tagChartByMonth", 500, 500);
+      var tagChartByMonth = dimple.newSvg("#tagChartByMonth", 950, 500);
       var dimpleChartByMonth = createTagChart(tagChartByMonth, dimple.plot.bar, "/api/tag/" + year + "/" + month + "?count=10", "tags", "Top Tags For " + dateStr);
           
       });
@@ -203,7 +212,7 @@
       }
 
     function failure(data) {
-       alert("failure loading tags");
+       //alert("failure loading tags");
     }
 
     function loadTagData(tagurl, successLoad, failureLoad) {
