Added sticky nav bar

--- a/flaskhome/app/templates/charttag.html
+++ b/flaskhome/app/templates/charttag.html
@@ -4,7 +4,8 @@
 <!--h2 id="js-toptags-alltime">Top Tags - All Time</h2-->
     <div id="barChartTag"></div>
 
-<h2 id="js-toptags-month">Top Tags - By Month</h2>
+<h1 id="js-toptags-month">&nbsp;</h1>
+<h2 id="js-toptags-month2">Top Tags - By Month</h2>
 <a href="#">Back to Top</a><br/>
     <div id="tagbymonthselect"><select id="selecttagmonth">
       <option value="12" selected="true">Dec</option>
@@ -24,7 +25,8 @@
     </div>
      <div id="tagChartByMonth"></div>
 
-<h2 id="js-faq"> Frequently Asked Questions</h2>
+<h1 id="js-faq">&nbsp;</h1>
+<h2 id="js-faq2"> Frequently Asked Questions</h2>
 <a href="#">Back to Top</a><br/>
 <div class="panel panel-default" style="width:100%">
   <div class="panel-heading">
