--- a/flaskhome/app/templates/base.html
+++ b/flaskhome/app/templates/base.html
@@ -36,7 +36,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -49,8 +49,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#js-toptags-alltime">Home</a></li>
-            <li><a href="#js-toptags-month">Top Tags By Month</a></li>
+            <li class="active"><a href="#js-toptags-month">Top Tags By Month</a></li>
             <li><a href="#js-faq">FAQ</a></li>
             <li><a href="#js-livetags">Live Trending Tags</a></li>
             <li><a href="#js-liveposts">Live Posts</a></li>
@@ -63,7 +62,6 @@
 
       <div class="starter-template">
 
-<h1>Stackurious</h1>
 
 {% block tagid %}{% endblock %}
 {% block taglive %}{% endblock %}
