--- a/flaskhome/app/templates/charttaglive.html
+++ b/flaskhome/app/templates/charttaglive.html
@@ -2,12 +2,14 @@
 {% extends "charttag.html" %} <!--this means that you are extending the base tempate -->
 {% block taglive %} <!-- this is the name of the block below -->
 
-<h2 id="js-livetags">Live Trending Tags</h2>
+<h1 id="js-livetags">&nbsp;</h1>
+<h2 id="js-livetags2">Live Trending Tags</h2>
 <a href="#">Back to Top</a>
 <div id="barLiveTag"/>
 </div>
 
-<h2 id="js-liveposts">Live Posts</h2>
+<h1 id="js-liveposts">&nbsp;</h1>
+<h2 id="js-liveposts2">Live Posts</h2>
 <a href="#">Back to Top</a>
 <div class="panel panel-default">
   <!-- Default panel contents -->
